--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: responsive_flutter
 description: A new Flutter project.
-version: 1.0.0
+version: 1.0.0+1
 
 environment:
   sdk: '>=3.0.2 <4.0.0'
